--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mailgen": "^2.0.27",
     "moment": "^2.29.4",
+    "nodemailer": "^6.9.2",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
